[package]
name = "oras"
version = "0.1.0"
authors = [
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Sajay Antony <sajaya@microsoft.com>",
]
edition = "2018"
default-run = "oras"
license-file = "LICENSE"
description = "A Kubernetes kubelet implementation in Rust, used for running WebAssembly modules in Kubernetes"
repository = "https://github.com/oras-project/oras-rs"
documentation = "https://github.com/oras-project/oras-rs/tree/master/docs"
readme = "README.md"
keywords = [
    "oras",
    "oci",
    "distribution",
]
exclude = [
    "docs/*",
    "demos/*",
    ".github/*",
    ".gitignore"
]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["native-tls"]
native-tls = [
    "oci-distribution/native-tls"
]
rustls-tls = [
    "oci-distribution/rustls-tls"
]

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3"
oci-distribution = { path = "./crates/oci-distribution", version = "0.6", default-features = false }
dirs = { package = "dirs-next", version = "2.0.0" }
hostname = "0.3"
regex = "1.3"
env_logger = "0.8"

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
reqwest = { version = "0.11", default-features = false }
tempfile = "3.1"
compiletest_rs = "0.6"

[workspace]
members = [
    "crates/oci-distribution",
]

[[bin]]
name = "oras"
path = "src/oras.rs"