[package]
name = "oci-distribution"
version = "0.6.0"
authors = [
    "Sajay Antony <sajaya@microsoft.com>",
]
edition = "2018"
license-file = "../../LICENSE"
description = "An OCI implementation in Rust"
repository = "https://github.com/oras-project/oras-rs"
readme = "README.md"
keywords = [
    "oci",
    "containers",
]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
hyperx = "0.13"
lazy_static = "1.4"
regex = "1.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.2"
tokio = { version  = "1.0", features = ["macros", "fs"] }
www-authenticate = "0.3"
tracing = { version = "0.1", features = ['log'] }

[dev-dependencies]
rstest = "0.6"
